<resources>
    <string name="app_name">Petagram4</string>
    <string name="texto_boton_click">Click</string>
    <string name="titulo">Hello World!</string>
    <string name="mensaje">Comentarios</string>
    <string name="texto_accion">Acción</string>
    <string name="titulo_tarjeta">Android 5.0</string>
    <string name="descripcion_tarjeta">Esta es la versión en la que se incluyó Material Design Android Lollipop</string>
    <string name="nombre_pet">René</string>
    <string name="likes_pet">5</string>
    <string name="action_settings">Settings</string>
    <string name="showLikes">Likes</string>
    <string name="showInfo">Información</string>
    <string name="infoapp">Aplicación desarrollada por S.S. Saúl Báez, estudiante mexicano de las Lic. en Economía e Ingeniería Matemática en la Universidad Nacional
    Autónoma de México (UNAM) y en el Instituto Politécnico Nacional (IPN). \nCDMX, México. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="hint_usuario">Escribe tu usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_mensaje">Comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_configurar">Configurar Cuenta</string>
    <string name="menuC_titulo">Petagram</string>
</resources>
