<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ss_baez.petagram4.ContactActivity">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <TextView
        android:id="@+id/TV_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="= Contacto ="
        android:textColor="#4D3E42"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:background="#00a39e9e"
        android:textAllCaps="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/user48"
            />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/FetNombre_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CampoTextoBorde"
            android:layout_gravity="center"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/etNombre_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:textSize="20sp"
                android:theme="@style/CampoTextoBorde"
                android:inputType="textPersonName"
                android:cursorVisible="true"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/email48"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/FetEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/CampoTextoBorde"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textSize="20sp"
                android:theme="@style/CampoTextoBorde"
                android:inputType="textEmailAddress"
                android:cursorVisible="true"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/FetDescripcion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="bottom|left"
        android:theme="@style/CampoTextoBorde"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            android:textSize="20sp"
            android:theme="@style/CampoTextoBorde"
            android:inputType="textMultiLine"
            android:cursorVisible="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/BTN_enviar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="ENVIAR"
        android:textSize="20sp"
        android:theme="@style/MiBotonRaised"/>

</LinearLayout>